matrix inversion lemma

--- a/RBOT101_2021/Notes/sections/matrices.tex
+++ b/RBOT101_2021/Notes/sections/matrices.tex
@@ -1,4 +1,4 @@
-\chapter{Matrix Analysis.}  
+\chapter{Introduction to Matrix Analysis.}  
  \label{chap:mat_anal::intro}
  
  Our goal here is to introduce the student to the study of matrix theory. Matrices are symbolism of the important transformations in everyday life; these transformations lie at the heart of mathematics and robotics. The contents of this topic are thus positioned toward the aspiration of roboticists, engineers of all stripes and scientists. Specifically, we are concerned with the \textit{theory of symmetric matrices},  which is important for all fields, \textit{matrices and differential equations}, necessary for engineering and robotics, as well as \textit{positive matrices}, necessary for probability theory. Most of the texts im this chapter are drawn from Richard Bellman's Matrix Analysis Book given in the Syllabus.
