--- a/RBOT101_2021/Notes/rbot_101.tex
+++ b/RBOT101_2021/Notes/rbot_101.tex
@@ -113,13 +113,13 @@
 	\mainmatter
 %%
 \newpage
-%\input{sections/intro}
-%\input{sections/matrices}
+\input{sections/intro}
+\input{sections/matrices}
 \input{sections/vectors}
-%\input{sections/opt_rot}
-%\input{sections/state_est}
-%\input{sections/robo_confs}
-%\input{sections/rigid_motions}
+\input{sections/opt_rot}
+\input{sections/state_est}
+\input{sections/robo_confs}
+\input{sections/rigid_motions}
 
 %\input{sections/manip_kine}
 %%\input{sections/statics_vel_kine}
