--- a/RBOT101_2021/Notes/sections/vectors.tex
+++ b/RBOT101_2021/Notes/sections/vectors.tex
@@ -760,6 +760,6 @@ so that
 %
 \begin{align}
 	\bar{A}^{-1} &= \left(A + BD^{-1}C\right)^{-1} \\
-						&= A^{-1} - A^{-1} B\left(D + C A^{-1}B\right)^{-1} C A^{-1-}
+						&= A^{-1} - A^{-1} B\left(D + C A^{-1}B\right)^{-1} C A^{-1}
 \end{align}
 \end{example}
