--- a/RBOT101_2021/Notes/sections/vectors.tex
+++ b/RBOT101_2021/Notes/sections/vectors.tex
@@ -28,7 +28,7 @@
  %
  \begin{align}
 \bm{x} = \begin{bmatrix}
-x_1 & x_2 & \vdots & x_N,
+x_1 & x_2 & \ldots & x_N,
 \end{bmatrix}
 \label{eq:row_vec}
 \end{align}
@@ -45,7 +45,7 @@ Two vectors $\bm{x}$ and $\bm{y}$ are said to be equal if all of their component
 %
 \begin{align}
 	\bm{x} + \bm{y} = \begin{bmatrix}
-	x_1 + y_1 \\ x_2+y_2 \\ \vdots x_N + y_N,
+	x_1 + y_1 \\ x_2+y_2 \\ \vdots \\ x_N + y_N,
 	\end{bmatrix}
 \end{align}
 % 
@@ -64,7 +64,7 @@ When a vector is multiplied by a scalar, we shall write it out as follows
 %
 \begin{align}
 	c_1 \bm{x} = \bm{x} c_1 = \begin{bmatrix}
-	c_1 x_1 \\ c_1 x_2 \\ c_1 x_N
+	c_1 x_1 \\ c_1 x_2 \\ \vdots \\ c_1 x_N
 	\end{bmatrix}
 \end{align}
 %
