--- a/RBOT101_2021/Notes/sections/state_est.tex
+++ b/RBOT101_2021/Notes/sections/state_est.tex
@@ -197,6 +197,91 @@ Since $A$ and $-A$ have eigenvalues that are negative of each other, $e^{At}$ is
 \end{example}
 
 \begin{homework}
-	Find the eigendata of the matrix A in \eqref{eq:example_matrix_eq}. Then determine the following terms using the eigenvector and eigenvalue that you may find
+	Find the eigendata of the matrix A in \eqref{eq:example_matrix_eq}. Then determine the following terms using the eigenvector and eigenvalue that you may find:
 	$\hat{A}, Q$ and $e^{At}$.
 \end{homework}
+
+\section{State Space Standard Forms}
+For a linear system, there are many possible state space models that can result in the same \textit{transfer function dynamics}. Therefore, standardizing the state space model structures is 
+relevant for solving problems in a conformal way. For consider the following input-output system linear difference equation
+%
+\begin{align}
+	y_n + a_1 y_{n-1}  + \ldots + a_{n-1} y_1 + a_n y = b_0 u_n + b_1 u_{n-1} + \ldots + b_{n-1} u_1 + b_n u
+\end{align}
+%
+with $u$ and $y$ serving respectively as the input and output, and $y_n$ serving as the $n$th derivative of $y$ with respect to time. If we take the Laplace transform of both sides, we have
+%
+\begin{align}
+	Y(s) \left(s^n + a_1s^{n-1}+\ldots + a_{n-1}s + a_n\right) = U(s)\left(b_0 s^n + b_1 s^{n-1} + \ldots + b_{n-1} s + b_n\right)
+\end{align}
+%
+so that the transfer function from the input $u$ to the output $y$ can be written as 
+%
+\begin{align}
+	\dfrac{Y(s)}{U(s)} = \dfrac{b_0 s^n + b_1 s^{n-1} + \ldots + b_{n-1} s + b_n}{s^n + a_1s^{n-1}+\ldots + a_{n-1}s + a_n}
+	\label{eq:transfer_fcn}
+\end{align}
+
+\subsection{Companion form}
+
+In \textit{companion form} representation, the coefficients of the transfer function in \eqref{eq:transfer_fcn} are arranged along its far rows or columns. An example would be 
+%
+\begin{align}
+	\begin{bmatrix} 0 & 0 & 0 & \cdots & 0 & -a_0 \\
+	1 & 0 & 0 & \cdots & 0 & -a_1 \\
+	0 & 1 & 0 & \cdots & 0 & -a_2 \\
+	0 & 0 & 1 & \cdots & 0 & -a_3 \\
+	\vdots & \vdots & \vdots &\ddots & \vdots & \vdots \\
+	0 & 0 & 0 & \cdots & 1 & -a_{n-1} 
+	\end{bmatrix}
+\end{align}
+%
+or
+%
+\begin{align}
+	\begin{bmatrix} -a_{n-1} & -a_{n-2} & -a_{n-3} & \cdots & -a_1 & -a_0 \\
+	1 & 0 & 0 & \cdots & 0 & 0 \\
+	0 & 1 & 0 & \cdots & 0 & 0 \\
+	0 & 0 & 1 & \cdots & 0 & 0 \\
+	\vdots & \vdots & \vdots &\ddots & \vdots & \vdots \\
+	0 & 0 & 0 & \cdots & 1 & 0 
+	\end{bmatrix}
+\end{align}
+
+In general, we use the convenient \textit{observable} and \textit{controllable} canonical forms in control theory. They are exactly the transpose of one another and using either for control design simplifies the system structure so that it can be readily manipulated for a desired control.
+
+\subsection{Controllable Canonical Form}
+
+When we want to design a controller that leverages the full state of the system (assuming this is known), often the \textit{controllable canonical form} will come in handy. It is expressed as follows:
+%
+\begin{subequations}
+	\begin{align}
+	A &= \begin{bmatrix} -a_1 & -a_2 & -a_3 & \cdots & -a_{n-1} & -a_n \\
+	1 & 0 & 0 & \cdots & 0 & 0 \\
+	0 & 1 & 0 & \cdots & 0 & 0 \\
+	0 & 0 & 1 & \cdots & 0 & 0 \\
+	\vdots & \vdots & \vdots &\ddots & \vdots & \vdots \\
+	0 & 0 & 0 & \cdots & 1 & 0 
+	\end{bmatrix} 
+	\\
+		B &= \begin{bmatrix} 1 \\ 0 \\ \vdots \\ 0 \end{bmatrix}
+	\quad
+	C = \begin{bmatrix} b_1 & b_2 & b_3 & \cdots & b_n \end{bmatrix}
+	\quad 
+	D = \begin{bmatrix} b_0 \end{bmatrix}
+	\end{align}
+\end{subequations}
+
+\begin{example}
+	For the system 
+	\begin{align}
+		\dfrac{Y(s)}{U(s)} = \dfrac{2s^3 + 5s^2-s+8}{s^2+4s-2}
+	\end{align}
+	%
+	we can realize the state space representation in canonical form as follows:
+	\begin{enumerate}
+		\item Observe that $n$ from \eqref{eq:transfer_fcn} is $3$, \ie the highest $s$ exponent in the given transfer function. 
+		%
+		\item It follows that we have $a_1= 4$ and $a_2 = -2$
+	\end{enumerate}
+\end{example}
