--- a/RBOT101_2021/Notes/sections/state_est.tex
+++ b/RBOT101_2021/Notes/sections/state_est.tex
@@ -250,6 +250,29 @@ or
 
 In general, we use the convenient \textit{observable} and \textit{controllable} canonical forms in control theory. They are exactly the transpose of one another and using either for control design simplifies the system structure so that it can be readily manipulated for a desired control.
 
+\subsection{Modal Form}
+
+The modal form is the dual to the companion form. In the modal form, the state matrix is a diagonal matrix with non-repeating eigenvalues such that the control has a unitary influence on each eigenspace, and the output is a linear combination of the contributions from the eigenspaces. That is,
+%
+\begin{subequations}
+	\begin{align}
+	A &= \begin{bmatrix} -p_1 & 0 & 0 & \cdots & 0 & 0 \\
+	0 & -p_2 & 0 & \cdots & 0 & 0 \\
+	0 & 0 & -p_3 & \cdots & 0 & 0 \\
+	\vdots & \vdots & \vdots &\ddots & \vdots & \vdots \\
+	0 & 0 & 0 & \cdots & 0 & -p_n
+	\end{bmatrix} \\
+	%
+	B &= \begin{bmatrix} 1 \\ 1 \\ \vdots \\ 1 \end{bmatrix} \quad
+	%
+	C = \begin{bmatrix} c_1 & c_2  & \cdots & c_n \end{bmatrix}
+	\end{align}
+\end{subequations}
+%
+\begin{homework}
+	Write out the solution to \autoref{eq:companion_ex} in modal form.
+\end{homework}
+
 \subsection{Controllable Canonical Form}
 
 When we want to design a controller that leverages the full state of the system (assuming this is known), often the \textit{controllable canonical form} will come in handy. It is expressed as follows:
@@ -275,13 +298,107 @@ When we want to design a controller that leverages the full state of the system 
 \begin{example}
 	For the system 
 	\begin{align}
-		\dfrac{Y(s)}{U(s)} = \dfrac{2s^3 + 5s^2-s+8}{s^2+4s-2}
+		\dfrac{Y(s)}{U(s)} = \dfrac{5s^2-s+8}{s^2+4s-2}
 	\end{align}
 	%
 	we can realize the state space representation in canonical form as follows:
 	\begin{enumerate}
 		\item Observe that $n$ from \eqref{eq:transfer_fcn} is $3$, \ie the highest $s$ exponent in the given transfer function. 
 		%
-		\item It follows that we have $a_1= 4$ and $a_2 = -2$
+		\item It follows that we have $a_0= -2$ and $a_1 = 4$; and $b_0 = 1, \, b_1=-21$, \, $b_2 = 102$, so that we can write the state space model as
+		%
+		\begin{align}
+			  \begin{bmatrix}
+			  \dot{x}_1 
+			  \\
+			  \dot{x}_2
+			  \end{bmatrix} 
+			  &=
+			  \begin{bmatrix}
+			  0 & 2  \\
+			  1 & -4 
+			  \end{bmatrix}
+			  %			  
+			  \begin{bmatrix}
+			  {x}_1 
+			  \\
+			  {x}_2
+			  \end{bmatrix} 
+			  +
+			  %			  
+			  \begin{bmatrix}
+			  1
+			  \\
+			  0
+			  \end{bmatrix} 			  
+			  %			  
+			  \begin{bmatrix}
+			  {u}_1 
+			  &
+			  {u}_2
+			  \end{bmatrix} \nonumber \\
+			  %
+			  y &= \begin{bmatrix}
+			  -21 & 102
+			  \end{bmatrix}
+			  %			  
+			  \begin{bmatrix}
+			  {x}_1 
+			  \\
+			  {x}_2
+			  \end{bmatrix} 
+			  + 
+			  \bm{u}
+		\end{align}
 	\end{enumerate}
 \end{example}
+%
+\begin{homework}
+	Derive the companion form for the system:
+	\begin{align}
+	\dfrac{Y(s)}{U(s)} = \dfrac{3s^2-2s+1}{s^2-8s+5}
+	\end{align}
+	\label{eq:companion_ex}
+\end{homework}
+
+The controllable canonical form is helpful in when using the pole placement method for controller design. However, the system's transformation to companion form is based on the controllability matrix which is almost always numerically singular for mid-range orders. It should be avoided for computation when possible.
+
+\subsection{Observable Canonical Form}
+
+In observable canonical form, the transfer function coefficients of \eqref{eq:transfer_fcn} are written in the rightmost column of the $A$ matrix similar to the companion canonical form but the $B$ matrix takes a different form. It is given as follows:
+%
+\begin{align}
+A &= \begin{bmatrix} 0 & 0 & 0 & \cdots & 0 & -a_0 \\
+1 & 0 & 0 & \cdots & 0 & -a_1 \\
+0 & 1 & 0 & \cdots & 0 & -a_2 \\
+0 & 0 & 1 & \cdots & 0 & -a_3 \\
+\vdots & \vdots & \vdots &\ddots & \vdots & \vdots \\
+0 & 0 & 0 & \cdots & 1 & -a_{n-1} 
+\end{bmatrix} \\
+%
+B &= \begin{bmatrix}
+	b_n - a_n b_0 \\
+	%	
+	b_{n-1} - a_{n-1} b_0 \\
+	%	
+	b_{n-2} - a_{n-2} b_0 \\
+	%	
+	\vdots \\
+	%
+	b_{1} - a_{1} b_0 \\
+\end{bmatrix}
+%
+\quad 
+C = \begin{bmatrix}
+ 0  & 0 & \ldots & 1
+\end{bmatrix}, \quad D = b_0
+ \end{align}
+%
+This observable canonical form is ill-conditioned for most state-space computation. It should be avoided for computation when possible as its controllability matrix is almost always numerically singular for mid-range orders.
+
+The observable and controllable canonical forms' matrices are respectively transposes of one another.
+
+%
+\begin{homework}
+Transform the exercise of \ref{eq:companion_ex} to observable canonical form.
+\end{homework}
