--- a/RBOT101_2021/Notes/sections/opt_rot.tex
+++ b/RBOT101_2021/Notes/sections/opt_rot.tex
@@ -47,7 +47,7 @@
  %
  We find that the closest point $\bm{p}_j$ of $P$  satisfies $d(\bm{q}, \bm{p}_j) = d(\bm{q}, P)$.
  
- Suppose that we have a \textbf{line segment} that connects the points, $\bm{r}_1, \bm{r}_2$, the distance between the point $\bm{r}$ and the line segment $l$ is
+ Suppose that we have a \textbf{line segment} that connects the points, $(\bm{r}_1, \bm{r}_2)$, the distance between the point $\bm{r}$ and the line segment $l$ is
  %
  \begin{align}
  	d(\bm{p}, l) = \min_{x+y=1} \|x\bm{r}_1 + y \bm{r}_2 - \bm{p} \|
