--- a/RBOT101_2021/Notes/sections/state_est.tex
+++ b/RBOT101_2021/Notes/sections/state_est.tex
@@ -426,7 +426,7 @@ Our treatment of dynamical so far has involved linear systems. These are optimis
 %
 where $f(\cdot)$ and $h(\cdot)$ are arbitrary vector valued functions, $w$ denotes the process noise, and $v$ denotes the measurement noise. We have a time-varying system if $f(\cdot)$ and $h(\cdot)$ are explicit functions of $t$, otherwise, the system is termed time-invariant. Suppose that $f(x, u, w) = Ax + Bu + w$ and $h(x,v) = Hx + v$, then the system is linear. Otherwise, the system is nonlinear.
 
-Often, we will need to linearize a nonlinear system in order to properly analyze its stability properties or synthesize its parameters for example, a particular control application. Suppose we have a nonlinear vector function $f(\cdot)$ of a scalar $x$, we can expand $f(x)$ in a Taylor series around some nominal operating point, $x = \bar{x}$ so that 
+Often, we will need to linearize a nonlinear system in order to properly analyze its stability properties or synthesize its parameters for a particular control application. Suppose we have a nonlinear vector function $f(\cdot)$ of a scalar $x$, we can expand $f(x)$ in a Taylor series around some nominal operating point, $x = \bar{x}$ so that 
 %
 \begin{align}
 	f(x) = f(\bar{x}) + \dfrac{\partial f}{\partial x} \bigg\rvert_{\tilde{x}} \tilde{x}+ \dfrac{1}{2!} \dfrac{\partial^2f}{\partial x^2} \bigg\rvert_{\tilde{x}} \tilde{x}^2 + \dfrac{1}{3!} \dfrac{\partial^3f}{\partial x^3} \bigg\rvert_{\tilde{x}} \tilde{x}^3 +  \ldots
@@ -445,5 +445,35 @@ where $\tilde{x} = x - \bar{x}$. For a $2 \times 1$ vector $x$, we can write $f(
  which can be compactly written as 
  %
  \begin{align}
- 	f(x) = f(\tilde{x}) + 
+ 	f(x) & = f(\tilde{x}) + \left(\tilde{x}_1 \dfrac{\partial}{\partial x_1} + \tilde{x}_2 \dfrac{\partial}{\partial x_2}\right)f\bigg\rvert_{\tilde{x}} +
+ 	%
+ 	\dfrac{1}{2!} \left(\tilde{x}_1 \dfrac{\partial}{\partial x_1} + \tilde{x}_2 \dfrac{\partial}{\partial x_2}\right)^2f\bigg\rvert_{\tilde{x}} + \nonumber \\
+ 	%
+ 	& 
+ 	%
+ 	\qquad \dfrac{1}{3!}\left(\tilde{x}_1 \dfrac{\partial}{\partial x_1} + \tilde{x}_2 \dfrac{\partial}{\partial x_2}\right)^3f\bigg\rvert_{\tilde{x}} + \ldots
  \end{align}
+%
+And when $n$ is an $n\times 1$ vector, the vector $f(x)$, expanded in a Taylor series becomes
+%
+\begin{align}
+	f(x) &=  f(\tilde{x}) + \left(\tilde{x}_1 \dfrac{\partial}{\partial x_1} + \ldots + \tilde{x}_n \dfrac{\partial}{\partial x_n}\right)f\bigg\rvert_{\tilde{x}} +
+	%
+	\dfrac{1}{2!} \left(\tilde{x}_1 \dfrac{\partial}{\partial x_1} + \ldots + \tilde{x}_n \dfrac{\partial}{\partial x_n}\right)^2f\bigg\rvert_{\tilde{x}} + \nonumber \\
+	%
+	& 
+	%
+	\qquad \dfrac{1}{3!}\left(\tilde{x}_1 \dfrac{\partial}{\partial x_1} + \ldots + \tilde{x}_n \dfrac{\partial}{\partial x_n}\right)^3f\bigg\rvert_{\tilde{x}} + \ldots
+\end{align}
+%
+Suppose we define the operation $D^k_{\tilde{x}}f$ as 
+%
+\begin{align}
+	D^k_{\tilde{x}} = \left(\sum_{i=1}^{n} \tilde{x}_i \dfrac{\partial}{\partial x_i}\right)^k f(x) \bigg \rvert_{\tilde{x}}
+\end{align}
+%
+so that we can define $f(x)$ in Taylor series form as 
+%
+\begin{align}
+	f(x) = f(\tilde{x}) + D_{\tilde{x}} f + \dfrac{1}{2!} D^2_{\tilde{x}} f + \dfrac{1}{3!} D^3_{\tilde{x}} f + \ldots
+\end{align}
