updated grade for Perillo

--- a/RBOT101_2021/Notes/rbot_101.tex
+++ b/RBOT101_2021/Notes/rbot_101.tex
@@ -113,12 +113,12 @@
 	\mainmatter
 %%
 \newpage
-%\input{sections/intro}
-%\input{sections/matrices}
-%\input{sections/vectors}
-%\input{sections/opt_rot}
-%\input{sections/robo_confs}
-%\input{sections/rigid_motions}
+\input{sections/intro}
+\input{sections/matrices}
+\input{sections/vectors}
+\input{sections/opt_rot}
+\input{sections/robo_confs}
+\input{sections/rigid_motions}
 \input{sections/state_est}
 
 %\input{sections/manip_kine}
