--- a/RBOT101_2021/Notes/sections/vectors.tex
+++ b/RBOT101_2021/Notes/sections/vectors.tex
@@ -285,7 +285,7 @@ Note the ordering of the matrix product above.
 \begin{homework}
 	Show that 
 	\begin{align}
-		\left(a_1^2 + a_2^2\right)\left(b_1^2 + b_2^2\right) = \left(a_2 b_1 + a_1 b_2\right)^2 + \left(a_1 b_1 + a_2 b_2\right)^2
+		\left(a_1^2 + a_2^2\right)\left(b_1^2 + b_2^2\right) = \left(a_2 b_1 + a_1 b_2\right)^2 + \left(a_1 b_1 - a_2 b_2\right)^2
 	\end{align}
 	\textbf{Hint:}  $|A B | = |A| |B|$, 
 \end{homework}
